tests/fixtures/errors/invalid_include_once_url.puml
@startuml
!include_once https://example.com/once.puml
@enduml
